# futuresql

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  metainfo.yaml  metainfo.yaml.license
examples/: CMakeLists.txt  hello-world.cpp  transaction.cpp
src/: CMakeLists.txt  FutureSQLConfig.cmake.in  querygenerator.cpp  querygenerator.h  querygenerator_p.h  threadeddatabase.cpp  threadeddatabase.h  threadeddatabase_p.h
tests/: CMakeLists.txt  sqlitetest.cpp
tests/migrations/2023-04-11-000805_init/: down.sql  up.sql
